--- a/learn-one.html
+++ b/learn-one.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>康文昌的在线HTML 教学小工具</title>
+    <title>复刻康文昌的在线HTML</title>
     <style>  
       body {
         margin: 0;
@@ -25,11 +25,11 @@
       padding: 15px;
       line-height: 1.7;
     ">
-      <p>元岛</p>
-      <p>元岛</p>
-      <p>元岛</p>
-      <p>元岛</p>
-      <p>元岛</p>
+      <p>网站复刻</p>
+      <p>网站复刻</p>
+      <p>网站复刻</p>
+      <p>网站复刻</p>
+      <p>网站复刻</p>
     </div>
 
     <div style = "
