--- a/learn-one.html
+++ b/learn-one.html
@@ -24,6 +24,7 @@
       margin: 30px auto;
       padding: 15px;
       line-height: 1.7;
+      text-align: center;
     ">
       <p>网站复刻</p>
       <p>网站复刻</p>
