--- a/learn-one.html
+++ b/learn-one.html
@@ -32,6 +32,16 @@
       <p>网站复刻</p>
       <p>网站复刻</p>
     </div>
+    
+    <div style = "
+      max-width: 700px;
+      margin: 30px auto;
+      padding: 15px;
+      line-height: 1.7;
+      text-align: right;
+    ">
+      <p>by 姚念</p>
+    </div>
 
     <div style = "
       background-color: #f1f1f1;
